--- a/package.json
+++ b/package.json
@@ -1,32 +1,14 @@
 {
-  "name": "react-hot-boilerplate",
+  "name": "tyler-alves-skills",
   "version": "1.0.0",
-  "description": "Boilerplate for ReactJS project with hot code reloading",
+  "description": "Submission for Particle Front End Developer position",
   "scripts": {
-    "start": "node server.js",
+    "start": "node ./node_modules/http-server/bin/http-server",
+    "hot-load": "node server.js",
     "lint": "eslint src"
   },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/gaearon/react-hot-boilerplate.git"
-  },
-  "keywords": [
-    "react",
-    "reactjs",
-    "boilerplate",
-    "hot",
-    "reload",
-    "hmr",
-    "live",
-    "edit",
-    "webpack"
-  ],
-  "author": "Dan Abramov <dan.abramov@me.com> (http://github.com/gaearon)",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/gaearon/react-hot-boilerplate/issues"
-  },
-  "homepage": "https://github.com/gaearon/react-hot-boilerplate",
+  "keywords": [],
+  "author": "Tyler Alves",
   "devDependencies": {
     "babel-core": "^6.0.20",
     "babel-eslint": "^4.1.3",
@@ -38,17 +20,20 @@
     "eslint": "^1.10.3",
     "eslint-plugin-react": "^3.6.2",
     "extract-text-webpack-plugin": "^1.0.1",
+    "file-loader": "^0.9.0",
     "node-sass": "^3.8.0",
     "react-hot-loader": "^1.3.0",
     "redux-devtools": "^3.3.1",
     "sass-loader": "^4.0.0",
+    "url-loader": "^0.5.7",
     "webpack": "^1.12.2",
     "webpack-dev-server": "^1.12.1"
   },
   "dependencies": {
     "bourbon": "^4.2.7",
     "bourbon-neat": "^1.8.0",
-    "particle-api-js": "^6.0.0",
+    "http-server": "^0.9.0",
+    "particle-api-js": "^6.0.2",
     "react": "^0.14.6",
     "react-dom": "^0.14.6",
     "react-redux": "^4.4.5",
